# command-finder

./: .clinerules  .gitignore  Cargo.toml  cp-catalog.json  grid_search.py  initial_results.txt  mv-catalog.json  ops-sync-catalog.json
src/: main.rs
src/adapters/: cli_controller.rs  ingestion_api.rs  mod.rs  persistence.rs
src/adapters/matching/: embedding.rs  keyword.rs  mod.rs  otsu.rs
src/core/: catalog_lifecycle_manager.rs  errors.rs  mod.rs  models.rs  query_orchestrator.rs  similarity_rank_aggregator.rs  syntactical_validator.rs
src/core/models/: catalog.rs  config.rs  maintainer.rs  mod.rs  search.rs
src/ports/inbound/: catalog_ingestion.rs  mod.rs  user_command.rs
src/ports/outbound/: matching_strategy.rs  mod.rs  storage.rs
